# tcp_pingpong

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/headers/: ball.h  client.h  gfx.h  object.h  pane.h  settings.h
client/src/: ball.cpp  client.cpp  gfx.cpp  main.cpp  object.cpp  pane.cpp
server/: CMakeLists.txt
server/headers/: ball.h  object.h  pane.h  server.h
server/src/: ball.cpp  main.cpp  pane.cpp  server.cpp
